# garden_simulation

./: CMakeLists.txt  readme.md
models/: bed.mtl
models/plants/: carrot.mtl  pumpkin.mtl
shaders/: grid.frag  grid.vert  model.frag  model.vert  sun.frag  sun.vert
src/: main.cpp  plant.h
src/controller/: gardencontroller.cpp  gardencontroller.h
src/model/: gardenmodel.cpp  gardenmodel.h  mocksensor.cpp  mocksensor.h  model.cpp  model.h  plant.cpp  sensordata.h
src/renderer/: camera.cpp  camera.h  shader.cpp  shader.h
src/view/: gardenglwidget.cpp  gardenglwidget.h  mainwindow.cpp  mainwindow.h  plantdragbutton.cpp  plantdragbutton.h
